[tool.poetry]
name = "datasynth"
version = "0.1.0"
description = ""
authors = ["Delcor <matheusdelcorbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
lxml = "^5.2.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
