[tool.poetry]
name = "datasynth"
version = "0.1.0"
description = ""
authors = ["Delcor <matheusdelcorbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
lxml = "^5.2.2"
pandas = "^2.2.2"
pyodbc = "^5.1.0"
sqlalchemy = "^2.0.31"
chardet = "^5.2.0"
unidecode = "^1.3.8"
playwright = "^1.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
